refactored SecurityConfig